; ModuleID = '/home/carl/AnghaBench/php-src/main/extr_rfc1867.c_php_mime_get_hdr_value.c'
source_filename = "/home/carl/AnghaBench/php-src/main/extr_rfc1867.c_php_mime_get_hdr_value.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i8*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32, i8*)* @php_mime_get_hdr_value to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @php_mime_get_hdr_value(i32 %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca %struct.TYPE_4__*, align 8
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  %7 = load i8*, i8** %5, align 8
  %8 = icmp eq i8* %7, null
  br i1 %8, label %9, label %10

9:                                                ; preds = %2
  store i8* null, i8** %3, align 8
  br label %29

10:                                               ; preds = %2
  %11 = call %struct.TYPE_4__* @zend_llist_get_first(i32* %4)
  store %struct.TYPE_4__* %11, %struct.TYPE_4__** %6, align 8
  br label %12

12:                                               ; preds = %26, %10
  %13 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %14 = icmp ne %struct.TYPE_4__* %13, null
  br i1 %14, label %15, label %28

15:                                               ; preds = %12
  %16 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 8
  %19 = load i8*, i8** %5, align 8
  %20 = call i32 @strcasecmp(i32 %18, i8* %19)
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %26, label %22

22:                                               ; preds = %15
  %23 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %24 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %23, i32 0, i32 0
  %25 = load i8*, i8** %24, align 8
  store i8* %25, i8** %3, align 8
  br label %29

26:                                               ; preds = %15
  %27 = call %struct.TYPE_4__* @zend_llist_get_next(i32* %4)
  store %struct.TYPE_4__* %27, %struct.TYPE_4__** %6, align 8
  br label %12

28:                                               ; preds = %12
  store i8* null, i8** %3, align 8
  br label %29

29:                                               ; preds = %28, %22, %9
  %30 = load i8*, i8** %3, align 8
  ret i8* %30
}

declare dso_local %struct.TYPE_4__* @zend_llist_get_first(i32*) #1

declare dso_local i32 @strcasecmp(i32, i8*) #1

declare dso_local %struct.TYPE_4__* @zend_llist_get_next(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
